--- a/GUI Agent/index.html
+++ b/GUI Agent/index.html
@@ -8,28 +8,38 @@
 <body>
   <div id="header">
     <span>PDF Intelliview</span>
-    <button id="toggle-theme">🌓</button>
+    <div>
+      <button id="health-check-btn" title="Check API Status">🔗</button>
+      <button id="toggle-theme">🌓</button>
+    </div>
   </div>
 
   <div id="main">
     <div id="pdf-container">
       
       <div id="sidebar">
-        <button class="mode-button" title="Outline Mode">🧩</button>
+        <button class="mode-button active" title="Outline Mode">🧩</button>
         <button class="mode-button" title="Persona Mode">🧠</button>
         <button class="mode-button" title="Semantic Mode">🌐</button>
       </div>
 
-
-      <button id="open-pdf-btn">Open PDF File</button>
-      <iframe id="pdf-viewer" style="display: none;"></iframe>
+      <div id="pdf-content">
+        <button id="open-pdf-btn">Open PDF File</button>
+        <div id="pdf-viewer-container" style="display: none;">
+          <div id="pdf-header">
+            <span id="pdf-filename">Document.pdf</span>
+            <button id="close-pdf-btn" title="Close PDF">✕</button>
+          </div>
+          <iframe id="pdf-viewer"></iframe>
+        </div>
+      </div>
     </div>
 
 
     <div id="outline-panel">
       <div id="outline-header">
-        <h3>Outlines Preview</h3>
-        <button id="extract-outlines-btn">Extract Outlines</button>
+        <h3>Results Preview</h3>
+        <button id="extract-outlines-btn">Extract Outline</button>
       </div>
       <pre id="outline-results"></pre>
     </div>
