--- a/GUI Agent/index.html
+++ b/GUI Agent/index.html
@@ -18,9 +18,9 @@
     <div id="pdf-container">
       
       <div id="sidebar">
-        <button class="mode-button active" title="Outline Mode">🧩</button>
-        <button class="mode-button" title="Persona Mode">🧠</button>
-        <button class="mode-button" title="Semantic Mode">🌐</button>
+        <button class="mode-button active" title="Outline Mode">📑</button>
+        <button class="mode-button" title="Persona Mode">👤</button>
+        <button class="mode-button" title="Semantic Mode">🧬</button>
       </div>
 
       <div id="pdf-content">
