multilingual model added

--- a/GUI Agent/index.html
+++ b/GUI Agent/index.html
@@ -21,6 +21,7 @@
         <button class="mode-button active" title="Outline Mode">📑</button>
         <button class="mode-button" title="Persona Mode">👤</button>
         <button class="mode-button" title="Semantic Mode">🧬</button>
+        <button class="mode-button" title="Multilingual Analysis">🌍</button>
       </div>
 
       <div id="pdf-content">
@@ -40,6 +41,8 @@
       <div id="outline-header">
         <h3>Results Preview</h3>
         <button id="extract-outlines-btn">Extract Outline</button>
+        <button id="analyze-text-btn" style="display: none;">Analyze Text</button>
+        <button id="extract-entities-btn" style="display: none;">Extract Entities</button>
       </div>
       <pre id="outline-results"></pre>
     </div>
